feat:add account schema endpoints to OpenAPI documentation and fixed type safety issues. Added new routes for getting and adding new accounts (bank accounts)
